# Custom-CPU-Emulator

./: .gitignore  CMakeLists.txt  README.md  program.txt
src/: CMakeLists.txt
src/assembler/: CMakeLists.txt  assembler.cpp  assembler.hpp  main.cpp
src/emulator/: CMakeLists.txt  CPU.cpp  CPU.hpp  DataStructures.hpp  main.cpp
